...

        let userListNavigationController = UINavigationController()
        let userListCoordinator = UsersListCoordinator.init(navigationController: userListNavigationController)
        userListCoordinator.parentCoordinator = parentCoordinator

        let userListItem = UITabBarItem()
        userListItem.title = "Users"
        userListItem.image = UIImage.init(systemName: "house.fill")
        userListNavigationController.tabBarItem = userListItem

        // Setup for profile tab
        let bookmarksNavigationController = UINavigationController()
        let bookmarksCoordinator = BookmarksCoordinator.init(navigationController: bookmarksNavigationController)
        bookmarksCoordinator.parentCoordinator = parentCoordinator

        let bookmarksItem = UITabBarItem()
        bookmarksItem.title = "Bookmarks"
        bookmarksItem.image = UIImage.init(systemName: "person.fill")
        bookmarksNavigationController.tabBarItem = bookmarksItem
        parentCoordinator?.childCoordinators.append(userListCoordinator)
        parentCoordinator?.childCoordinators.append(bookmarksCoordinator)
        userListCoordinator.start()
        bookmarksCoordinator.start()
...
